# Lode-Runner-Finall-Project

./: CMakeLists.txt  CMakeSettings.json  README.txt
audio/: CMakeLists.txt
include/: CMakeLists.txt  DinamicObject.h  DynamicObject.h  EndGame.h  Enemy.h  EnemyController.h  Entity.h  Game.h  GameController.h  Hud.h  Macros.h  Map.h  MovementController.h  Object.h  Player.h  PlayerController.h  Screens.h  StaticObject.h  VeryStupid.h  Views.h
include/AbstractClases/: Animation.h  Button.h  Clock.h  Consumables.h  DynamicObject.h  MacroSettings.h  MovementController.h  Music.h  Object.h  Screens.h  State.h  StaticObject.h
include/EndGame/: Death.h  Win.h
include/Enemy/: Algo.h  Algorithms.h  Astar.h  Bfs.h  Edges.h  Enemy.h  EnemyController.h  Graph.h  Node.h  OneSide.h  RandomPath.h  Tile.h
include/Game/: Game.h  Hud.h  Map.h  MapData.h  Score.h
include/Game/GameObject/: Coin.h  DynamicObject.h  Ladder.h  Object.h  Pole.h  Present.h  RigidBodyObject.h  StaticObject.h
include/MainMenu/: MainMenu.h
include/Menues/: Menu.h
include/Menues/Components/: Button.h  Selection.h
include/Menues/MainMenu/: InGameMenu.h  MainMenu.h  Settings.h
include/Player/: Lives.h  Player.h  PlayerController.h
include/States/: State.h
include/States/EndGame/: Death.h  Win.h
include/States/Game/: Game.h  Hud.h  Map.h  MapData.h  Score.h
include/States/Menues/: Menu.h
resources/: Board.txt  Board2.txt  CMakeLists.txt
src/: CMakeLists.txt  DynamicObject.cpp  EnemyContorller.cpp  Game.cpp  GameController.cpp  Map.cpp  Object.cpp  Player.cpp  PlayerController.cpp  RandomPath.cpp  Screens.cpp  StaticObject.cpp  VeryStupid.cpp  main.cpp
src/AbstractClases/: Button.cpp  CMakeLists.txt  Clock.cpp  Consumables.cpp  DynamicObject.cpp  MacroSettings.cpp  MovementController.cpp  Music.cpp  Object.cpp  Screens.cpp  State.cpp  StaticObject.cpp
src/EndGame/: CMakeLists.txt  Death.cpp  Win.cpp
src/Enemy/: Astar.cpp  Bfs.cpp  CMakeLists.txt  Enemy.cpp  EnemyContorller.cpp  Graph.cpp  Node.cpp  OneSide.cpp  RandomPath.cpp  Tile.cpp  VeryStupid.cpp
src/Game/: CMakeLists.txt  Game.cpp  Hud.cpp  Map.cpp  MapData.cpp  Score.cpp
src/MainMenu/: CMakeLists.txt  MainMenu.cpp
src/Menues/: Menu.cpp
src/Player/: CMakeLists.txt  Lives.cpp  Player.cpp  PlayerController.cpp
src/States/: CMakeLists.txt  State.cpp
(+58 files in other folders)
